--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-      <script type="text/javascript" src="js/scripts.js"></script>
+      <script src="js/jquery-3.2.1.js"></script>
+      <script src="js/jquery.flip.min.js"></script>
+      <script src="js/scripts.js"></script>
 
       <title>Talk to the web page</title>
     </head>
@@ -10,12 +11,12 @@
     <body>
       <div class="flip">
         <div class="front">
-        <img src="img/image.jpg" alt="" />
+          <img src="img/images.png" alt="image" />
+        </div>
+        <div class="back">
+          <h3>Some Text in the Back!</h3>
+        </div>
       </div>
-      <div class="back">
-        <h3>Some Text in the Back!</h3>
-      </div>
-</div>
 
     </body>
   </html>
